# Todo-fastapi-react

./: .gitignore  README.md  docker-compose.yml
server/: .dockerignore  Dockerfile  middlewares.py  pyproject.toml
server/todo/: .env  alembic.ini  app_factory.py  client_secret.json  create_fastapi_app.py  main.py  service_account.json
server/todo/actions/: create_superuser.py
server/todo/alembic/versions/: 2025_05_08_1946-88224821fa50_init_table.py  2025_05_08_2016-99a2d19f584b_add_avatar.py  2025_05_28_1952-a525e3908341_fixed_surname.py  2025_08_09_0128-2c28c79839b5_add_end_date_to_todos.py  2025_09_07_2223-376b2886c99b_add_is_fail_with_default_false_and_.py
server/todo/api/: __init__.py
server/todo/api/dependencies/: get_db.py
server/todo/api/dependencies/authentication/: access_tokens.py  strategy.py
server/todo/api/views/: __init__.py
server/todo/api/views/auth_users/: __init__.py  auth.py  users.py
server/todo/api/views/avatars/: __init__.py  avatars.py
server/todo/api/views/payments/: __init__.py  (+1 more)
server/todo/core/: celery_app.py  celery_tasks.py  config.py
server/todo/core/authentication/: transport.py
server/todo/core/crud/: review.py  todo.py
server/todo/core/db/: sync_db.py
server/todo/core/gunicorn/: app_options.py  logger.py
server/todo/core/models/: __init__.py  avatar.py  review.py  todo.py  user.py
server/todo/core/schemas/: review.py  todo.py  user.py
server/todo/support/: all_avatars_gdrive.py  del_avatars_gdrive.py  get_refresh_token.py
server/todo/utils/: drive_client.py  fetch_gdrive_bytes.py  gdrive_utils.py
(+256 files in other folders)
